chingos de cosas ajasjas

--- a/public/assets/lang/es_mx.json
+++ b/public/assets/lang/es_mx.json
@@ -1,6 +1,6 @@
 {
     "header": {
-        "commads": "Comandos",
+        "commands": "Comandos",
         "music": "Música",
         "console": "Consola",
         "options": "Opciones",
