--- a/public/assets/lang/en_us.json
+++ b/public/assets/lang/en_us.json
@@ -29,11 +29,11 @@
         }
     },
     "commands": {
-        "title": "Chipa-bot | Comandos"
+        "title": "Chipa-bot | Commands"
     },
     "footer": {
-        "about": "Acerca de",
-        "devops": "Desarrolladores",
-        "contact": "Contacto"
+        "about": "About us",
+        "devops": "Developers",
+        "contact": "Contact"
     }
 }
