--- a/public/assets/lang/es_mx.json
+++ b/public/assets/lang/es_mx.json
@@ -15,13 +15,13 @@
                 "title": "Música",
                 "text": "Un reproductor de música y un motor de búsqueda de YouTube, Spotify y SoundCloud"
             },
-            "news": {
-                "title": "",
-                "text": ""
+            "moderation": {
+                "title": "Moderación",
+                "text": "Comandos para moderar el servidor fácilmente"
             },
-            "add": {
-                "title": "",
-                "text": ""
+            "ui": {
+                "title": "Interfaz",
+                "text": "Interfaz fácil de usar para interaccionar con el bot"
             }
         },
         "add": {
